[project]
name = "jupyterlab_neon_theme"
version = "4.0.0"
description = "JupyterLab 4.x migration of jupyterlab-neon-theme - A flat, 80's neon inspired theme"
authors = [
    {name = "Baicai Ye", email = "yebaicai@foxmail.com"},
    {name = "Youjiben", email = "yswuzheng@outlook.com"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyterlab>=4.0.0,<5.0.0",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yeebc/jupyterlab-neon-theme"
Bug_Tracker = "https://github.com/yeebc/jupyterlab-neon-theme/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "jest"]

[build-system]
requires = ["hatchling", "jupyterlab>=4.0.0,<5.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_neon_theme"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_neon_theme/labextension" = "share/jupyter/labextensions/@yeebc/jupyterlab_neon_theme"

[tool.hatch.build.targets.sdist]
include = [
    "/jupyterlab_neon_theme",
    "/src",
    "/style",
]
